--- a/main.ipynb
+++ b/main.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-24T17:14:25.070404Z",
-     "start_time": "2025-02-24T17:14:23.682782Z"
+     "end_time": "2025-02-26T17:32:35.316652Z",
+     "start_time": "2025-02-26T17:32:34.426095Z"
     }
    },
    "cell_type": "code",
@@ -17,7 +17,7 @@
    ],
    "id": "8a50964d26467a44",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "metadata": {
@@ -1517,6 +1517,55 @@
     }
    ],
    "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-26T17:35:37.771470Z",
+     "start_time": "2025-02-26T17:35:23.403348Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# from scipy import stats\n",
+    "#\n",
+    "# gene_exp = pd.read_csv(\"data/gene_expression.tsv\", sep=\"\\t\", index_col=0)\n",
+    "# gene_exp = gene_exp.replace(0.0, np.nan).dropna(thresh=int(len(gene_exp.columns) * 0.05))\n",
+    "#\n",
+    "# gene_exp = pd.DataFrame(stats.zscore(gene_exp, axis=1, nan_policy=\"omit\"), index=gene_exp.index,\n",
+    "#                         columns=gene_exp.columns)\n",
+    "#\n"
+   ],
+   "id": "6cdc236cfa0ea7c4",
+   "outputs": [],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-26T17:39:09.516417Z",
+     "start_time": "2025-02-26T17:38:55.628309Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Load data - use low_memory=False for large files\n",
+    "gene_exp = pd.read_csv(\"data/gene_expression.tsv\", sep=\"\\t\", index_col=0, low_memory=False)\n",
+    "\n",
+    "# Combine operations: replace zeros and filter rows in one step\n",
+    "# This avoids creating an intermediate DataFrame\n",
+    "min_non_na_values = int(len(gene_exp.columns) * 0.05)\n",
+    "gene_exp = gene_exp.mask(gene_exp == 0).dropna(thresh=min_non_na_values)\n",
+    "\n",
+    "# Use pandas built-in z-score function for better performance\n",
+    "gene_exp = (gene_exp - gene_exp.mean(axis=1, skipna=True).values.reshape(-1, 1)) / gene_exp.std(axis=1, skipna=True).values.reshape(-1, 1)"
+   ],
+   "id": "27462be766d40eff",
+   "outputs": [],
+   "execution_count": 5
   }
  ],
  "metadata": {
