--- a/main.ipynb
+++ b/main.ipynb
@@ -2,15 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
    "id": "8a50964d26467a44",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-04T14:36:57.807342Z",
-     "start_time": "2025-03-04T14:36:56.552263Z"
+     "end_time": "2025-04-08T19:55:16.374914Z",
+     "start_time": "2025-04-08T19:55:15.964683Z"
     }
    },
-   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -18,7 +16,42 @@
     "import os\n",
     "from scipy.sparse import issparse  # Import issparse\n",
     "from collections import Counter"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-08T19:59:37.499413Z",
+     "start_time": "2025-04-08T19:59:34.370819Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "data = sc.read_h5ad(\"data/perturbData/TianKampmann2021_CRISPRa.h5ad\")\n",
+    "meta_data = pd.DataFrame(data.obs)\n",
+    "gene_exp = pd.DataFrame(data.X.toarray())\n",
+    "\n",
+    "max_num = np.max(data.X.toarray())\n",
+    "print(max_num)\n",
+    "\n",
+    "# Count how many zeros\n",
+    "zero_count = np.count_nonzero(data.X.toarray() == 0)\n",
+    "print(gene_exp.shape)"
+   ],
+   "id": "27755c39e5be6323",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5301.0\n",
+      "(21193, 33538)\n"
+     ]
+    }
+   ],
+   "execution_count": 7
   },
   {
    "cell_type": "code",
